--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,13 @@
     margin: 0;
     cursor: default;
 }
+
+.taskSection{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+}
+.taskBoxes{
+    margin: 0 12px;
+}
