--- a/src/app/components/task-box/task-box.component.html
+++ b/src/app/components/task-box/task-box.component.html
@@ -10,7 +10,7 @@
     </mat-card-content>
     <mat-card-actions class="buttonBox">
       <button mat-button><mat-icon>visibility</mat-icon></button>
-      <button mat-button><mat-icon>edit</mat-icon></button>
+      <button mat-button (click)="editTask()"><mat-icon>edit</mat-icon></button>
       <button mat-button (click)="removeTask()"><mat-icon>delete</mat-icon></button>
     </mat-card-actions>
     
