--- a/src/app/task/edit-task/edit-task.component.html
+++ b/src/app/task/edit-task/edit-task.component.html
@@ -6,7 +6,7 @@
 </mat-form-field>
 
 <mat-form-field>
-  <textarea matInput [(ngModel)]="data.descrption" placeholder="Descrição"></textarea>
+  <textarea matInput [(ngModel)]="data.description" placeholder="Descrição"></textarea>
 </mat-form-field>
 
 <mat-form-field>
