--- a/src/app/task/create-task/create-task.component.html
+++ b/src/app/task/create-task/create-task.component.html
@@ -1,4 +1,5 @@
 <section id="CreateTask">
+    <h2 class="titlePage" >Criar Tarefa</h2>
     <mat-form-field class="formCamp">
         <mat-label>Atividade: </mat-label>
         <input matInput [(ngModel)]="titleTask">
