--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-header titleCompany="{{title}}"> </app-header>
 
-<app-create-task></app-create-task>
-
-<app-show-task></app-show-task>
+<router-outlet></router-outlet>
