--- a/src/app/user/login-user/login-user.component.html
+++ b/src/app/user/login-user/login-user.component.html
@@ -1,4 +1,4 @@
-<section class="login-container">
+<section class="container">
     <h2 class="titlePage">Login</h2>
     <form (ngSubmit)="login()">
       <mat-form-field class="formCamp">
