--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,8 +1,13 @@
 <mat-toolbar id="Header">
-  <div  [routerLink]="['PrincipalPage']" class="logo">
-    <mat-icon>task</mat-icon>
-    <span > {{titleCompany}} </span>
-
+  <div>
+    <div [routerLink]="['PrincipalPage']" class="logo">
+      <mat-icon>task</mat-icon>
+      <span>{{titleCompany}}</span>
+      <span *ngIf="currentUser">| {{currentUser.nickname}}</span>
+    </div>
+    <div>
+      <p class="pageDescription"></p>
+    </div>
   </div>
 
   <div class="choiceBox">
@@ -17,12 +22,6 @@
       <button mat-menu-item [routerLink]="['Login']">
         Login
       </button>
-
-    
     </mat-menu>
-    
-
   </div>
-    
-
 </mat-toolbar>
