modificações na criação das tasls

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -23,5 +23,8 @@
         Login
       </button>
     </mat-menu>
+    <button mat-button>
+      <mat-icon>apps</mat-icon>
+    </button>
   </div>
 </mat-toolbar>
