--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -12,7 +12,7 @@
 
   <div class="choiceBox">
     <button mat-button [matMenuTriggerFor]="menu">
-      <mat-icon>person</mat-icon>
+      <mat-icon>account-circle</mat-icon>
     </button>
 
     <mat-menu #menu="matMenu">
@@ -23,6 +23,9 @@
         Login
       </button>
     </mat-menu>
+    <button mat-button >
+      <mat-icon>event</mat-icon>
+    </button>
     <button mat-button>
       <mat-icon>apps</mat-icon>
     </button>
