--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,37 @@
 <mat-sidenav-container>
     <mat-sidenav-content>
         <!-- [ngClass]="{ 'hide': !openMenu }" -->
-        <mat-sidenav [(opened)]="openMenu" >
-            <mat-icon>home</mat-icon> Home
-            <mat-icon>task</mat-icon> Tasks
-            <mat-icon>event</mat-icon> Calendar
-            <mat-icon>settings</mat-icon> Settings
-            <mat-icon>group</mat-icon> Groups
+        <mat-sidenav [(opened)]="openMenu">
+                <mat-icon>home</mat-icon> Home
+                <button mat-button [routerLink]="['PrincipalPage']">
+                    home
+                </button>
+                <mat-divider />
+                <mat-icon>task</mat-icon> Tasks
+                <button mat-button [routerLink]="['RegisterUser']">
+                    atividades
+                </button>
+                <mat-divider />
+                <mat-icon>event</mat-icon> Calendar
+                <button mat-button [routerLink]="['RegisterUser']">
+                    calendario
+                </button>
+                <mat-divider />
+                <mat-icon>settings</mat-icon> Settings
+                <button mat-button [routerLink]="['RegisterUser']">
+                    configurações
+                </button>
+                <mat-divider />
+                <mat-icon>group</mat-icon> Groups
+                <button mat-button [routerLink]="['RegisterUser']">
+                    Grupos
+                </button>
         </mat-sidenav>
-        
+
         <mat-sidenav-container>
             <app-header titleCompany="{{title}}" (toggle)="toggleSidenavBar()"> </app-header>
             <router-outlet></router-outlet>
-            
+
         </mat-sidenav-container>
     </mat-sidenav-content>
 </mat-sidenav-container>
