--- a/src/app/user/register-user/register-user.component.html
+++ b/src/app/user/register-user/register-user.component.html
@@ -1,3 +1,4 @@
+<section class="section">
 <section class="container" [ngClass]="{ 'success': registeredUser>0, 'failed': registeredUser==0 }">
   
   <h2 class="titlePage">Registre-se</h2>
@@ -25,4 +26,5 @@
       </p>
     </div>
   </form>
+</section>
 </section>
