descomplexidado a ideia de ambientes individuais

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,7 @@ app-header {
   }
   
   mat-sidenav-container {
-    padding-top: 64px; /* Ajuste esta altura de acordo com a altura do app-header. */
+    padding-top: 64px; 
   }
 
 .mat-sidenav{
