--- a/src/app/task/show-task/show-task.component.html
+++ b/src/app/task/show-task/show-task.component.html
@@ -1,5 +1,11 @@
-<section class="taskSection" id="TaskSection">
-    <app-task-box class="taskBoxes" *ngFor="let task of tasks" [task]="task"
+<section *ngIf="actualUser && actualUser.tasks.length >0; else noTasks" class="taskSection" id="TaskSection">
+    <app-task-box class="taskBoxes" *ngFor="let task of actualUser.tasks " [task]="task"
         (removeTaskEvent)="removeTask(task)" (editTaskEvent)="editTask(task)">
     </app-task-box>
 </section>
+
+<ng-template #noTasks>
+    <section id="NoTaskShowSection">
+        <h1>Sem tarefas para mostrar</h1>
+    </section>
+</ng-template>
