--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,40 @@
 <app-header titleCompany="{{title}}" (toggle)="toggleSidenavBar()"> </app-header>
 <mat-sidenav-container>
     <mat-sidenav [(opened)]="openMenu">
+        
         <mat-icon>home</mat-icon> Home
-        <button mat-button [routerLink]="['PrincipalPage']">
+        <button mat-button [routerLink]="['home']">
             home
         </button>
         <mat-divider />
+        
         <mat-icon>task</mat-icon> Tasks
         <button mat-button [routerLink]="['RegisterUser']">
             atividades
         </button>
         <mat-divider />
+        
         <mat-icon>event</mat-icon> Calendar
         <button mat-button [routerLink]="['RegisterUser']">
             calendario
         </button>
         <mat-divider />
-        <mat-icon>settings</mat-icon> Settings
-        <button mat-button [routerLink]="['RegisterUser']">
-            configurações
-        </button>
-        <mat-divider />
+        
         <mat-icon>group</mat-icon> Groups
         <button mat-button [routerLink]="['RegisterUser']">
             Grupos
         </button>
+
+        <mat-divider />
+        <mat-icon>settings</mat-icon> Settings
+        <button mat-button [routerLink]="['RegisterUser']">
+            configurações
+        </button>
+
     </mat-sidenav>
+    
     
     <mat-sidenav-content>
         <router-outlet></router-outlet>
     </mat-sidenav-content>
-
 </mat-sidenav-container>
