--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,9 +32,7 @@
         </button>
 
     </mat-sidenav>
-    
-    
     <mat-sidenav-content>
-        <router-outlet></router-outlet>
+        <router-outlet id="page"></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
