--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -1,12 +1,13 @@
-#Header{
+#Header #First-Row, #Header #Second-Row{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 15vh;
-    font-size: 2rem;
+    height: calc(20vh / 2);
+    padding: 20px 10px;
+    font-size: 1.5rem;
     background: rgb(35, 56, 80) ;
     color: white;
-
+    flex: 1 1 auto;
 }
 
 .choiceBox{
@@ -18,6 +19,6 @@
 
 .logo{
     display: flex;
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
