--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,9 @@ font-family: Roboto, "Helvetica Neue", sans-serif;
     color: red;
     margin: 10px 0;
 }
+
+.mat-icon-lg{
+    font-size: 26px !important;
+    height: auto !important;
+    width: auto !important;
+}
