--- a/src/app/task/task-box/task-box.component.html
+++ b/src/app/task/task-box/task-box.component.html
@@ -2,7 +2,7 @@
     <mat-card-header>
       <mat-card-title>{{task.title}}</mat-card-title>
     </mat-card-header>
-    <img mat-card-image [src]= "task.imageLink" [alt]="task.title">
+    <img mat-card-image [src]= "task.imageLink">
     <mat-card-content>
       <p>
         {{task.description}}
