--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
         </button>
 
     </mat-sidenav>
-    <mat-sidenav-content>
-        <router-outlet id="page"></router-outlet>
+    <mat-sidenav-content id="page">
+        <router-outlet ></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
