--- a/src/app/task/task-box/task-box.component.css
+++ b/src/app/task/task-box/task-box.component.css
@@ -1,7 +1,6 @@
 .taskCard{
     width: 450px;
     height: 400px;
-    overflow:hidden;
     padding: 10px;
     margin: 10px 10px;
     display: flex;
@@ -9,6 +8,10 @@
     align-items: center;
     justify-content: center;
   }
+img{
+  max-height:200px;
+  overflow: hidden;
+}
 .buttonBox{
   display: flex;
   width: 100%;
