--- a/src/app/task/edit-task/edit-task.component.css
+++ b/src/app/task/edit-task/edit-task.component.css
@@ -2,4 +2,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+.data{
+    width:100%;
+}
+
+.data mat-form-field{
+    width: 100%;
+}
+.button-container{
+    padding:10px;
 }
