--- a/src/app/task/edit-task/edit-task.component.html
+++ b/src/app/task/edit-task/edit-task.component.html
@@ -1,29 +1,45 @@
-<h1>Edit Task</h1>
+<div class="data">
 
-<!-- Campos de edição -->
-<mat-form-field>
-  <input matInput [(ngModel)]="data.title" placeholder="Título">
-</mat-form-field>
+  <h1>Edit Task</h1>
 
-<mat-form-field>
-  <textarea matInput [(ngModel)]="data.description" placeholder="Descrição"></textarea>
-</mat-form-field>
-
-<mat-form-field>
-  <input matInput [(ngModel)]="data.imageLink" placeholder="Link da Imagem">
-</mat-form-field>
-
-<div class="dataBox">
+  <!-- Campos de edição -->
   <mat-form-field>
-    <input matInput [(ngModel)]="data.dateStart" placeholder="Data para Iniciar">
+    <mat-label>Título</mat-label>
+    <input matInput [(ngModel)]="data.title" placeholder="Título">
   </mat-form-field>
+
   <mat-form-field>
-    <input matInput [(ngModel)]="data.dateFinal" placeholder="Data para Encerrar">
+    <mat-label>Descrição</mat-label>
+    <textarea matInput [(ngModel)]="data.description" placeholder="Descrição"></textarea>
   </mat-form-field>
-    
-</div>
-<!-- Botões de ação -->
-<div class="button-container">
-  <button mat-button (click)="saveChanges()">Salvar</button>
-  <button mat-button (click)="cancel()">Cancelar</button>
+
+  <mat-form-field>
+    <mat-label>Imagem</mat-label>
+
+    <input matInput [(ngModel)]="data.imageLink" placeholder="Link da Imagem">
+  </mat-form-field>
+
+  <div class="dataBox">
+    <mat-form-field>
+      <mat-label>Início:</mat-label>
+      <input matInput [matDatepicker]="pickerStart" [(ngModel)]="data.dateStart">
+      <mat-hint>DD/MM/AAAA</mat-hint>
+      <mat-datepicker-toggle matIconSuffix [for]="pickerStart"></mat-datepicker-toggle>
+      <mat-datepicker #pickerStart></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Final:</mat-label>
+      <input matInput [min]="minDateFinal" [matDatepicker]="pickerFinal" [(ngModel)]="data.dateFinal">
+      <mat-hint>DD/MM/AAAA</mat-hint>
+      <mat-datepicker-toggle matIconSuffix [for]="pickerFinal"></mat-datepicker-toggle>
+      <mat-datepicker #pickerFinal></mat-datepicker>
+    </mat-form-field>
+
+  </div>
+  <!-- Botões de ação -->
+  <div class="button-container">
+    <button mat-button (click)="saveChanges()">Salvar</button>
+    <button mat-button (click)="cancel()">Cancelar</button>
+  </div>
 </div>
