--- a/src/app/task/task-box/task-box.component.css
+++ b/src/app/task/task-box/task-box.component.css
@@ -1,12 +1,16 @@
 .taskCard{
-    width: 450px;
-    height: 400px;
+    min-width: 250px;
+    max-width: 450px;
+    min-height: 300px;
+    max-height: 450px;
     padding: 10px;
     margin: 10px 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+
   }
 img{
   max-height:200px;
