--- a/src/app/task/create-task/create-task.component.html
+++ b/src/app/task/create-task/create-task.component.html
@@ -33,5 +33,5 @@
         <input matInput [(ngModel)]="actualTask.imageLink">
     </mat-form-field>
 
-    <button class="createTaskButton" mat-button color="accent" (click)="create()">Create</button>
+    <button class="createTaskButton" mat-button color="accent" (click)="create()">Criar Tarefa</button>
 </section>
