--- a/src/app/task/task-window/task-window.component.html
+++ b/src/app/task/task-window/task-window.component.html
@@ -18,7 +18,7 @@
     </div>
 
     <div>
-        <p> Criador: {{this.task.author.nickname}}</p>
+        <p> Criador: {{this.task.author}}</p>
     </div>
 
 </section>
