--- a/src/app/task/create-task/create-task.component.html
+++ b/src/app/task/create-task/create-task.component.html
@@ -1,4 +1,4 @@
-<section id="CreateTask">
+<section id="CreateTask" class="fade">
     <h2 class="titlePage">Criar Tarefa</h2>
     <mat-form-field class="formCamp">
         <mat-label>Atividade: </mat-label>
