--- a/src/app/user/user-box/user-box.component.html
+++ b/src/app/user/user-box/user-box.component.html
@@ -3,7 +3,7 @@
       <mat-card-title>{{user.nickname}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <p>Tarefas: {{user.tasks.length}}</p>
+        <p>Tarefas: {{user.tasks?.length}}</p>
     </mat-card-content>
   </mat-card>
   
