Crud Tá funcionando!

--- a/src/app/task/show-task/show-task.component.html
+++ b/src/app/task/show-task/show-task.component.html
@@ -5,7 +5,7 @@
 </section>
 
 <ng-template #noTasks>
-<!--     <section id="NoTaskShowSection">
+     <section id="NoTaskShowSection">
         <h1>Sem tarefas para mostrar</h1>
-    </section>  -->
+    </section> 
 </ng-template>
