--- a/src/app/user/user-box/user-box.component.css
+++ b/src/app/user/user-box/user-box.component.css
@@ -7,10 +7,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     overflow: hidden;
 
   }
+
+.userDescription{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  width: 100%;
+  height: 90%;
+}
 .buttonBox{
   display: flex;
   width: 100%;
