--- a/src/app/task/create-task/create-task.component.html
+++ b/src/app/task/create-task/create-task.component.html
@@ -7,7 +7,7 @@
 
     <mat-form-field class="formCamp">
         <mat-label>Descrição: </mat-label>
-        <textarea matInput required [(ngModel)]="actualTask.description"></textarea>
+        <textarea matInput [(ngModel)]="actualTask.description"></textarea>
     </mat-form-field>
     
     <div class="dateBox">
