--- a/src/app/task/task-box/task-box.component.css
+++ b/src/app/task/task-box/task-box.component.css
@@ -1,27 +1,75 @@
-.taskCard{
-    min-width: 250px;
-    max-width: 450px;
-    height: 450px;
-    padding: 10px;
-    margin: 10px 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
+ .taskCard{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+  border-radius: 4px;
+  box-shadow: 0 10px 5px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  padding: 15px;
+  cursor: default;
 
-  }
-img{
-  max-height:200px;
-  overflow: hidden;
+  background-color: #f5f5f5;
+  animation: growIn 0.3s ease-in-out;
+
 }
-.buttonBox{
+
+.taskCard:hover {
+  background-color: #f5f5f5; /* Adiciona uma cor de fundo sutil ao passar o mouse */
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra subtil ao passar o mouse */
+}
+
+
+mat-card-header {
   display: flex;
-  width: 100%;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
-.buttonBox button{
+
+ mat-card-title {
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+ img {
   width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 4px;
+  margin-bottom: 10px;
 }
-    
+
+ p {
+  font-size: 14px;
+  line-height: 1.5;
+  margin-bottom: 0;
+}
+
+ .buttonBox button {
+  border-radius: 4px;
+  padding: 5px 10px;
+  font-size: 2rem;
+  color: #f5f5f5;
+  font-weight: bolder;
+}
+
+.checkBtn{
+  background: rgb(29, 198, 29);
+}
+.editBtn{
+  background: rgb(198, 198, 29);
+}
+.removeBtn{
+  background: rgb(198, 29, 29);
+}
+
+@keyframes growIn {
+  from {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
