--- a/src/app/user/user-box/user-box.component.css
+++ b/src/app/user/user-box/user-box.component.css
@@ -1,7 +1,6 @@
 .userCard{
-    min-width: 250px;
-    max-width: 450px;
-    height: 450px;
+    height: 300px;
+    width: 300px;
     padding: 10px;
     margin: 10px 10px;
     display: flex;
@@ -20,13 +19,13 @@
   width: 100%;
   height: 90%;
 }
-.buttonBox{
+/* .buttonBox{
   display: flex;
   width: 100%;
   align-items: center;
   justify-content: space-around;
 }
-.buttonBox button{
+ */
+ .buttonBox{
   width: 100%;
 }
-    
