--- a/src/app/task/show-task/show-task.component.html
+++ b/src/app/task/show-task/show-task.component.html
@@ -1,6 +1,6 @@
-<section *ngIf="actualUser && actualUser.tasks?.length >0; else noTasks" class="taskSection" id="TaskSection">
-    <app-task-box class="taskBoxes" *ngFor="let task of actualUser.tasks " [task]="task"
-        (removeTaskEvent)="removeTask(task)" (editTaskEvent)="editTask(task)">
+<section *ngIf="userOwner && tasksToShow.length >0; else noTasks" class="taskSection" id="TaskSection">
+    <app-task-box class="taskBoxes" *ngFor="let task of tasksToShow " [task]="task"
+        (changeTaskStateEvent)="changeTaskState(task)"(removeTaskEvent)="removeTask(task)" (editTaskEvent)="editTask(task)" >
     </app-task-box>
 </section>
 
