--- a/src/app/task/task-box/task-box.component.css
+++ b/src/app/task/task-box/task-box.component.css
@@ -1,75 +1,100 @@
- .taskCard{
+ .taskCard {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
-  border-radius: 4px;
-  box-shadow: 0 10px 5px rgba(0, 0, 0, 0.1);
-  margin: 10px;
-  padding: 15px;
-  cursor: default;
+   min-width:300px ;
+   border-radius: 4px;
+   box-shadow: 0 10px 5px rgba(0, 0, 0, 0.1);
+   margin: 10px;
+   padding: 15px;
+   cursor: default;
+   background-color: #f5f5f5;
+   animation: growIn 0.3s ease-in-out;
 
-  background-color: #f5f5f5;
-  animation: growIn 0.3s ease-in-out;
+ }
 
-}
-
-.taskCard:hover {
-  background-color: #f5f5f5; /* Adiciona uma cor de fundo sutil ao passar o mouse */
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra subtil ao passar o mouse */
-}
+ .taskCard:hover {
+   /* background-color: #f5f5f5; */
+   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+ }
 
 
-mat-card-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+ mat-card-header {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+ }
 
  mat-card-title {
-  font-size: 1.4rem;
-  font-weight: bold;
-}
+   font-size: 1.4rem;
+   font-weight: bold;
+ }
 
  img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  border-radius: 4px;
-  margin-bottom: 10px;
-}
+   width: 100%;
+   height: auto;
+   object-fit: cover;
+   border-radius: 4px;
+   margin-bottom: 10px;
+ }
 
  p {
-  font-size: 14px;
-  line-height: 1.5;
-  margin-bottom: 0;
-}
+   font-size: 14px;
+   line-height: 1.5;
+   margin-bottom: 0;
+ }
+
+ mat-select{
+  width: 350px;
+ }
 
  .buttonBox button {
-  border-radius: 4px;
-  padding: 5px 10px;
-  font-size: 2rem;
-  color: #f5f5f5;
-  font-weight: bolder;
-}
+   border-radius: 4px;
+   padding: 5px 10px;
+   font-size: 2rem;
+   color: #f5f5f5;
+   font-weight: bolder;
+ }
 
-.checkBtn{
-  background: rgb(29, 198, 29);
-}
-.editBtn{
-  background: rgb(198, 198, 29);
-}
-.removeBtn{
-  background: rgb(198, 29, 29);
-}
+ .uncheckBtn {
 
-@keyframes growIn {
-  from {
-    transform: scale(0.8);
-    opacity: 0;
-  }
-  to {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
+   background: rgba(140, 220, 50, 0.84);
+ }
+
+ .checkBtn {
+   background: rgb(29, 198, 29);
+ }
+
+ .editBtn {
+   background: rgb(198, 198, 29);
+ }
+
+ .removeBtn {
+   background: rgb(198, 29, 29);
+ }
+
+ @keyframes growIn {
+   from {
+     transform: scale(0.8);
+     opacity: 0;
+   }
+
+   to {
+     transform: scale(1);
+     opacity: 1;
+   }
+ }
+
+ .taskCard.taskdone {
+   background-color: #95e986;
+   border: 1px solid rgb(78, 174, 30);
+   color: #1b1b1b;
+ }
+
+ .taskCard.taskWaiting {
+   background-color: #4ca33c;
+   border: 1px solid #4ca321;
+   color: #ffffff;
+
+ }
