--- a/src/app/user/user-page/user-page.component.html
+++ b/src/app/user/user-page/user-page.component.html
@@ -1,7 +1,18 @@
-
 <button id="toggleCreateTask" mat-button (click)="toggleCreateTask()">{{toogleMessageList[posicao]}}</button>
 <app-create-task *ngIf="isCreatingTask" [actualUser]="this.user"></app-create-task>
 <h3 id="UserSpaceName">Espaço de {{this.user?.nickname}}</h3>
 
+<section>
+    <h2>Em andamento</h2>
+    <app-show-task [tasksToShow]="this.filterTaskState('doing')" [userOwner]="this.user"></app-show-task>
+</section>
 
-<app-show-task [actualUser]="this.user"></app-show-task>
+<section>
+    <h2>Concluídas</h2>
+    <app-show-task [tasksToShow]="this.filterTaskState('done')" [userOwner]="this.user"></app-show-task>
+</section>
+
+<section>
+    <h2>Todas</h2>
+    <app-show-task [tasksToShow]="this.filterTaskState()" [userOwner]="this.user"></app-show-task>
+</section>
