--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { 
-margin: 0; 
-font-family: Roboto, "Helvetica Neue", sans-serif; 
+html,
+body {
+    height: 100%;
 }
 
-.titlePage{
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.titlePage {
     font-size: 3rem;
 }
 
-.ErrorMessage{
+.ErrorMessage {
     color: red;
     margin: 10px 0;
 }
 
-.mat-icon-lg{
+.mat-icon-lg {
     font-size: 26px !important;
     height: auto !important;
     width: auto !important;
@@ -30,3 +34,44 @@ font-family: Roboto, "Helvetica Neue", sans-serif;
 .fade-in.show {
     opacity: 1;
 }
+
+.buttonBox {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.buttonBox button {
+    width: 100%;
+    margin: 0 5px;
+}
+
+.dialogTitle{
+    font-weight:bold;
+    }
+
+#ConfirmBtn {
+    background-color: rgb(35, 56, 80);
+    color: #ffffff;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  #ConfirmBtn:hover {
+    background-color: rgb(45, 66, 90);
+  }
+  
+  #CancelBtn {
+    background-color: #e9ecef;
+    color: #333333;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  #CancelBtn:hover {
+    background-color: #d9d9d9;
+  }
