--- a/src/app/auth/register-user/register-user.component.html
+++ b/src/app/auth/register-user/register-user.component.html
@@ -6,17 +6,17 @@
   <form (ngSubmit)="registerUser()" >
     <mat-form-field class="formCamp">
       <mat-label>Insira um apelido:</mat-label>
-      <input matInput required [(ngModel)]="nickname" type="text" id="nickname" name="nickname">
+      <input matInput required [(ngModel)]="userToRegister.nickname" type="text" id="nickname" name="nickname">
     </mat-form-field>
 
     <mat-form-field class="formCamp">
       <mat-label>Seu Email:</mat-label>
-      <input matInput required [(ngModel)]="email" type="email" id="email" name="email">
+      <input matInput required [(ngModel)]="userToRegister.email" type="email" id="email" name="email">
     </mat-form-field>
 
     <mat-form-field class="formCamp">
       <mat-label>Senha:</mat-label>
-      <input matInput required [(ngModel)]="password" type="password" id="password" name="password">
+      <input matInput required [(ngModel)]="userToRegister.password" type="password" id="password" name="password">
     </mat-form-field>
     <button mat-button color="accent" type="submit">Registrar-se</button>
     
