--- a/src/app/auth/login-user/login-user.component.html
+++ b/src/app/auth/login-user/login-user.component.html
@@ -1,5 +1,5 @@
 <section class="section">
-  <section class="container" [ngClass]="{ 'success': loggedUser>0, 'failed': loggedUser==0 }">
+  <section class="container" [ngClass]="{ 'success': loginSucessCheck>0, 'failed': loginSucessCheck==0 }">
     <h2 class="titlePage">Login</h2>
     
     <form (ngSubmit)="login()">
@@ -16,7 +16,7 @@
       <button mat-button color="accent" type="submit">Entrar</button>
     </form>
     <div *ngIf="statusMessage">
-      <p [ngClass]="{ 'sucessMessage': loggedUser>0, 'errorMessage': loggedUser==0}">
+      <p [ngClass]="{ 'sucessMessage': loginSucessCheck>0, 'errorMessage': loginSucessCheck==0}">
         {{statusMessage}}
       </p>
     </div>
